--- a/package.json
+++ b/package.json
@@ -1,24 +1,13 @@
 {
-	"name": "dotplay",
-	"version": "0.0.1",
-    "private": true,
-	"scripts": {
-		"start": "node server.js"
-	},
-	"dependencies": {
-		"express": "4.13.x",
-		"cfenv": "1.0.x",
-		"angular": "^1.4.9",
-    "angular-animate": "^1.4.9",
-    "angular-fontawesome": "^0.4.0",
-    "angular-local-storage": "^0.2.2",
-    "angular-route": "^1.4.9",
-    "angular-toastr": "^1.7.0",
-    "angular-ui-bootstrap": "^1.1.2",
-    "angular-ui-router": "^0.2.17"
-	},
-	"repository": {},
-	"engines": {
-		"node": "4.2.x"
-	}
+"name": "dotplay",
+"version": "1.0.0",
+"author": "Dingfu Sun, William Foster",
+"description": "A simple game",
+"dependencies": {
+	"connect": "^2.0.0",
+	"serve-static": "^1.5.0"
+},
+"scripts": {
+	"start": "node server.js"
+}
 }
