--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "angular-route": "^1.4.9",
     "angular-toastr": "^1.7.0",
     "angular-ui-bootstrap": "^1.1.2",
-    "angular-ui-router": "^0.2.17"
+    "angular-ui-router": "^0.2.17",
+		"socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5"
 	},
 	"repository": {},
 	"engines": {
